REGRESSION(291398@main): ASSERTION FAILED: expected.asNumber() == result.asNumber() in JSC::EncodedJSValue JSC::arrayProtoFuncIndexOf(JSGlobalObject *, CallFrame *) https://bugs.webkit.org/show_bug.cgi?id=288931 rdar://145945591

Reviewed by Yusuke Suzuki.

We should use `HashMap::add` instead of `HashMap::set` when updating an
AtomString array because `set` replaces the old value with a new one.

This can disrupt the liveness of existing AtomStrings, which is undesirable
since we want to preserve the already allocated AtomString's pointer in the map.

By using `add`, we ensure that once an AtomString is stored, it remains
live as long as it is needed, preventing unnecessary churn in the AtomString map.

* Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
(JSC::ArrayNode::emitBytecode):
* Source/JavaScriptCore/runtime/StringPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/WeakGCMap.h:

Canonical link: https://commits.webkit.org/291535@main